<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/sportify_background"
    android:padding="@dimen/spacing_xl">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:alpha="0.4"
        android:contentDescription="@string/placeholder_in_progress"
        android:src="@android:drawable/ic_menu_help"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvPlaceholderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_fragment_in_progress"
        style="@style/Sportify.Text.Subtitle"
        android:layout_marginTop="@dimen/spacing_md" />

    <TextView
        android:id="@+id/tvPlaceholderDesc"
        style="@style/Sportify.Text.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/placeholder_content_will_be_shown"
        android:textAlignment="center"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
